--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3'
 services:
   artifactory:
-    image: mattgruter/artifactory
+    image: docker.bintray.io/jfrog/artifactory-pro
     ports:
-     - "8080:8080"
+     - "8081:8081"
+    volumes:
+     - ./test-artifactory-data:/var/opt/jfrog/artifactory
